<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffffff"
        android:orientation="vertical" >

        <LinearLayout
		    android:id="@+id/chart"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"
		    android:background="@color/statistic_background"
		    android:orientation="vertical"
		    android:layout_marginBottom="10px">
		</LinearLayout>
	
        <LinearLayout
            android:id="@+id/ll_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffffff"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_oneFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_statistic_daily" />

            <Button
                android:id="@+id/bt_twoFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_statistic_month" />

            <Button
                android:id="@+id/bt_threeFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_statistic_year" />
        
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>